--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,12 @@
 name: SimpleAuth
 main: SimpleAuth\SimpleAuth
 version: 2.1.3
-api: [3.0.0]
+api: [3.11.7]
 load: STARTUP
-author: PocketMine Team
+author: linuxthefish
 authors: [shoghicp]
 description: Prevents people from impersonating an account, requires registration and login when connecting.
-website: https://github.com/PocketMine/SimpleAuth
+website: https://github.com/syzolin/SimpleAuth
 commands:
  login:
   description: "Logs into an account"
